k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
  namespace: todo-app
  labels:
    app: git-team-todo
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: git-team-todo

  template:
    metadata:
      labels:
        app: git-team-todo

    spec:
      containers:
        - name: todo-container
          image: chakrigupta/git-team-todo-app:latest

          ports:
            - containerPort: 8082

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
