k8s/pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: todo-pod
  labels:
    app: git-team-todo

spec:
  containers:
    - name: todo-container
      image: chakrigupta/git-team-todo-app:latest
      ports:
        - containerPort: 8082
