k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: todo-app
spec:
  selector:
    app: git-team-todo

  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

  type: ClusterIP
